...
                                        <rect key="frame" x="0.0" y="108" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BMi-eh-OEr" id="1xS-U0-Duv">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To Do List Example" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NIm-GG-MT1">
                                                    <rect key="frame" x="8" y="11" width="584" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                            <constraint firstAttribute="trailing" secondItem="Qaq-ud-tF6" secondAttribute="trailing" id="0cw-8W-6Bh"/>
                            <constraint firstItem="Qaq-ud-tF6" firstAttribute="top" secondItem="2Qu-df-XFP" secondAttribute="top" id="2z7-tq-kIv"/>
                            <constraint firstItem="Qaq-ud-tF6" firstAttribute="leading" secondItem="2Qu-df-XFP" secondAttribute="leading" id="axD-l6-Zjv"/>
                            <constraint firstItem="muj-ND-yl6" firstAttribute="top" secondItem="Qaq-ud-tF6" secondAttribute="bottom" id="zFq-6v-ixO"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="To Do Example" id="HJL-Qz-VhM">
                        <barButtonItem key="leftBarButtonItem" title="Edit" style="done" id="8jw-Fa-iUx"/>
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="bPk-Zc-c3o"/>
                    </navigationItem>
                    <connections>
                        <outlet property="addButton" destination="bPk-Zc-c3o" id="AJG-kL-tHq"/>
                        <outlet property="editingButton" destination="8jw-Fa-iUx" id="apZ-yj-kNl"/>
                        <outlet property="tableView" destination="Qaq-ud-tF6" id="wTz-Dm-2jc"/>
...
